d120/static/d120/css/custom.css
body {
    font-family: 'Libre Franklin', Helvetica, Arial, sans-serif;
    font-size: 15px;
    line-height: 200%;
    color: #444444;
    overflow-y: scroll;
}
body.cke_editable {
    margin: 8px;
}
a:hover {
    color: #111111;
}
footer {
    background-color: #ecf0f1;
    color: #7f8c8d;
}
footer p {
    line-height: 20px;
    margin: 10px;
}
footer a {
    color: #9aa4af;
    font-weight: 700;
}
footer i {
    padding-right: 10px;
}
footer .row {
    padding: 10px 0;
}
.right {
    float: right;
    margin-top: 25px;
    margin-bottom: 25px;
    margin-left: 25px;
}
.left {
    float: left;
    margin-top: 25px;
    margin-bottom: 25px;
    margin-right: 25px;
}
#header img {
    height: 100px;
    margin-top: 25px;
    margin-bottom: 25px;
}
#copyright {
    margin-top: 60px
}
#content,
#sidebar {
    margin-top: 35px;
    margin-bottom: 50px
}
#sidebar {
    font-size: 18px;
    margin-top: 50px;
}
#content {
    text-align: justify;
}
.navbar-logos {
    padding: 0px;
}
.navbar-nav li a {
    color: #f5f5f5;
    font-size: 18px;
}
.navbar-nav li a:hover {
    background-color: #777777;
    background-color: rgba(0, 0, 0, .5);
    color: #f5f5f5;
}
.breadcrumb {
    background-color: inherit;
    padding: 0;
    text-align: left;
}
.breadcrumb>li{
    display: inline;
}
.language-chooser{
    margin-left: 10px;
}
.sidebar-active,
.sidebar-active:hover,
.sidebar-active:focus {
    color: #ffffff;
}
.sidebar-active > a:hover,
.sidebar-active > a:focus {
    color: #ffffff!important;
}
.sidebar-nav {
    border-left: 5px solid #999999;
}
.sidebar-nav > li > a {
    padding: 10px 15px 10px 0;
}
.sidebar-nav > li > a:focus {
    background-color: transparent;
}
.sidebar-nav > li {
    padding-left: 20px;
    margin-left: -5px;
}
.sidebar-nav > li:hover {
    border-left: 5px solid #999999;
    padding-left: 15px;
    background-color: #eee;
}
li.sidebar-active {
    padding-left: 15px;
}
.sidebar-nav a {
    text-decoration: none;
    display:block;
}
.sidebar-nav a:hover {
    font-weight: bold;
}
.sidebar-active-link {
    font-weight: bold;
}
.sidebar-active > a {
    color: #ffffff!important;
    text-decoration: none;
}
.sidebar-active > ul {
    padding: 10px;
    background-color: #cccccc;
    background-color: rgba(255, 255, 255, .75);
    padding-left: 25px!important;
    margin-left: -15px;
}
.sidebar-active > ul li {
    list-style-type: none;
}
@media (max-width: 522px) {
    #responsivelogo {
        display: none;
    }
}
.header-navbar {
    padding: 0;
}
.header-navbar-link {
    line-height: 25px;
    padding: 15px !important;
}
li.headline:hover {
    background-color: transparent;
}
.rss-plugin {
    margin-top: 50px;
}
.feed-entry-date {
    text-align: right;
}
.feed-entry {
    border-bottom: 2px solid #444444;
    padding-bottom: 15px;
    margin-top: 25px;
}
.navbar-toggler {
    float: none;
    border-color: #999999;
}
.navbar-toggler-icon {
    color: #999999;
}
.navbar-collapse {
    padding: 0;
}
.navbar {
    border-radius: 0;
    border: 0;
    margin-bottom: 0;
}
.additionalMargin {
    margin-bottom: 25px;
}
.menuIndent {
    padding-left: 20px;
}
.announcement {
    border-left: 3px solid #b90f22;
    background-color: #f9d6d6;
    margin-top: 25px;
    padding: 20px 20px 10px 20px;
}
.announcement:empty {
    display: none;
}
.navbar-default .navbar-nav > li > a:focus {
    color: #ffffff;
}
h1,h2,h3,h4,h5 {
    text-align:left;
}

.table h1,h2,h3,h4,h5 {
    margin-top:5px;
}

.table .table {
    margin-bottom:0;
}

